# flexSolver

./: CMakeLists.txt  fur.bgeo  make.bash  makeFur.bash  make_dso.bash  makefile  solver.bash  test.hip
src/: SOP_FlexSolver.cpp  SOP_FlexSolver.hpp  SOP_FlexWires.cpp  SOP_FlexWires.hpp  SOP_SParticle.C  SOP_SParticle.h  fur.cpp  fur.hpp  solver.cpp  solver.hpp
